# Grid

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/module/notes/: notes.hpp  notes_editor.hpp  notes_state.hpp  notes_storage.cpp  notes_storage.hpp
src/ui/: ui.cpp  ui.hpp
